# iKPUB

./: .gitignore  README.md  pyproject.toml
config/: article_subset.default.yaml  models.default.yaml
src/: query_ads.py
src/data/: compose.py  db_mongo_conn.py  fetch_full_text.py  ingest.py  insert_training_data.py  load_pubs.py  prepare.py  query_ads.py  sqlite_to_mongo.py
src/data_pipes/: build_proposal_vstore.py  clean_coversheets.py  fetch_full_text.py  prepare.py  preprocess.py  query_ads.py  sqlite_to_mongo.py
src/eval/: mine_salience.py  predict_labels.py  run_queue.py  test_harness.py
src/models/: auto.py  base_kpub_classifier.py  embedding.py  heads.py  llm.py  multi_block.py  prop_matcher.py  setfit.py  snippet.py  transformer.py  transformer_legacy.py
src/models/prompts/: drp_classify.txt  drp_criteria.txt  keck_classify.txt  koa_classify.txt
src/scripts/: predict.py  train.py
