[project]
name = "kpub"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "ipympl>=0.10.0",
  "matplotlib>=3.8",
  "nltk>=3.8",
  "pandas>=2.0",
  "peft>=0.18.0",
  "pgvector>=0.4.0",
  "psycopg[binary]>=3.1",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "seaborn>=0.13",
  "sentence-transformers>=2.6"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
