[project]
name = "kpub"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "ipympl>=0.10.0",
  "matplotlib>=3.10.8",
  "nltk>=3.9.3",
  "pandas>=3.0.1",
  "peft>=0.18.1",
  "pgvector>=0.4.2",
  "psycopg[binary]>=3.3.3",
  "python-dotenv>=1.2.1",
  "requests>=2.32.5",
  "seaborn>=0.13.2",
  "sentence-transformers>=5.2.3",
  "setfit>=1.1.3",
  "rank-bm25>=0.2.2",
  "captum>=0.7.0",
  "pymongo>=4.16.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
